@@ -8,6 +8,7 @@
          be able to actually change configuration -->
     <allow own="org.freedesktop.SystemToolsBackends"/>
     <deny send_interface="org.freedesktop.SystemToolsBackends"/>
+    <deny send_destination="org.freedesktop.SystemToolsBackends"/>
   </policy>
 
   <!-- This will not work if pam_console support is not enabled -->
@@ -21,7 +22,16 @@
     <allow send_destination="org.freedesktop.SystemToolsBackends"/>
   </policy>
 
+  <!--
   <policy user="@STB_GROUP@">
+    <allow send_interface="org.freedesktop.SystemToolsBackends"/>
+    <allow send_destination="org.freedesktop.SystemToolsBackends"/>
+  </policy>
+  -->
+
+  <!-- use this at the moment, dbus 
+       crashes if the group doesn't exist -->
+  <policy context="default">
     <allow send_interface="org.freedesktop.SystemToolsBackends"/>
     <allow send_destination="org.freedesktop.SystemToolsBackends"/>
   </policy>
